# CV_Cuda_Cpp_Sample

./: .gitattributes  CMakeLists.txt  README.md
include/: yolo_detector.hpp
src/: main.cpp  yolo_detector.cpp
